--- a/themes/cornflower/css/cornflower.css
+++ b/themes/cornflower/css/cornflower.css
@@ -5,3 +5,29 @@
 }
 
 /* @end */
+
+/* @group Core overrides */
+
+/* th {
+  border-bottom: 0 none;
+  padding-right: 0; /* LTR */
+/*}
+tbody {
+  border-top: 0 none;
+}
+tr.even,
+tr.odd {
+  background-color: transparent;
+  border-bottom: 0 none;
+  padding: 0;
+}*/
+
+/* @end */
+
+/* @group Inflections */
+
+/* @group Table */
+
+/* @end */
+
+/* @end */
