more templates, more css, more stuff!
Signed-off-by: Jesse Beach <splendidnoise@gmail.com>

--- a/themes/cornflower/css/cornflower.css
+++ b/themes/cornflower/css/cornflower.css
@@ -31,3 +31,12 @@ tr.odd {
 /* @end */
 
 /* @end */
+
+/* @group Components */
+
+#site-name {
+  font-size: 48px;
+  line-height: 1;
+}
+
+/* @end */
