--- a/themes/mytheme/css/messages.css
+++ b/themes/mytheme/css/messages.css
@@ -1,4 +1,6 @@
-/* messages */
+/**
+ * Messages CSS
+ */
 div.messages,
 div.help {
   font-family: Georgia, Helvetica, arial, sans-serif;
@@ -10,7 +12,7 @@ div.help {
   padding-top: 0;
 }
 div.messages {
-  font-size:20px;
+  font-size: 20px;
   line-height: 23px;
 }
 div.messages ul li {
@@ -18,18 +20,18 @@ div.messages ul li {
 }
 div.help  {
   background: #d5eaf1 url("../images/bg-help.png") 10px 10px no-repeat;
-  color:#0090a9;
-  border:1px solid #0090a9;
+  border: 1px solid #0090a9;
+  color: #0090a9;
 }
 div.status {
   background: #eaf4dc url("../images/bg-status.png") 10px 10px no-repeat;
-  color:#44a028;
-  border:1px solid #44a028;
+  border: 1px solid #44a028;
+  color: #44a028;
 }
 div.warning {
   background: url("../images/bg-warning.png") no-repeat scroll 10px 10px #FFFFDD;
-  border: 1px solid #B8860B;
   color: #B8860B;
+  border: 1px solid #B8860B;
 }
 div.error {
   background: #f9a7bc url("../images/bg-error.png") 10px 10px no-repeat;
@@ -37,9 +39,9 @@ div.error {
 div.error,
 .form-item input.error,
 .form-item textarea.error {
-  color:#990000;
-  border:1px solid #990000;
-  background-color: #f9a7bc
+  border: 1px solid #990000;
+  background-color: #f9a7bc;
+  color: #990000;
 }
 div.error ul li {
   margin: 8px 0;
