--- a/themes/mytheme/Session 2/mytheme_2_5/css/layout.css
+++ b/themes/mytheme/Session 2/mytheme_2_5/css/layout.css
@@ -21,7 +21,7 @@ body {
   text-align: right;
 }
 
-#sidebar-second {
+#sidebar-first {
   float: right;
   margin: 20px 16px 20px 0; /* 4px of borders */
   width: 240px;
